--- a/min-filmlista/public/index.html
+++ b/min-filmlista/public/index.html
@@ -46,5 +46,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer>Movie List created by: Anita Olsson, Malmö University</footer>
   </body>
 </html>
